# ultralight-frenzy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agent/: agent.py  tools.py
app/: dependencies.py  main.py  schemas.py
app/routers/: chat.py  gear.py  ingest.py  search.py
cli/: main.py
db/: client.py  embeddings.py  operations.py
scrapers/: base.py  lighterpack.py  outdoorgearlab.py  playwright_base.py  reddit_lp.py  rei.py  shopify.py
scrapers/configs/: sites.py
tests/: test_base.py  test_operations.py
